--- a/kalashnikov/sass/media.sass
+++ b/kalashnikov/sass/media.sass
@@ -1,3 +1,10 @@
+
+
+@media screen and ( max-width: 1200px )
+    .translation__media 
+        iframe
+            min-height: 471px
+
 @media screen and ( max-width: 1160px )
     .tops
         &__title
@@ -113,7 +120,17 @@
         &__text
             font-size: 36px
 
+@media screen and ( max-width: 796px )
+    .translation__media 
+        iframe
+            min-height: 529px
+
+
 @media screen and ( max-width: 770px )
+
+    .login__body
+        margin: 35px auto 80px
+
     .footer__top
         &, & .nav__list
             display: flex
@@ -121,6 +138,16 @@
             flex-direction: column
         .nav__item
             margin-bottom: 10px
+
+@media screen and ( max-width: 620px )
+    .translation__media 
+        iframe
+            min-height: 529px
+
+@media screen and ( max-width: 604px )
+    .translation__media 
+        iframe
+            min-height: 849px
 
 @media screen and ( max-width: 570px )
 
@@ -175,6 +202,11 @@
             &_big
                 font-size: 52px
 
+@media screen and ( max-width: 520px )
+    .translation__media 
+        iframe
+            min-height: 800px
+
 @media screen and ( max-width: 470px )
 
     .form
@@ -222,7 +254,11 @@
             &_big
                 font-size: 44px
 
+
 @media screen and ( max-width: 410px )
+    .translation__media 
+        iframe
+            min-height: 730px
 
     .gallery
         &__item
@@ -251,3 +287,8 @@
                 margin-left: 10px
             &_big
                 font-size: 32px
+
+@media screen and ( max-width: 350px )
+    .translation__media 
+        iframe
+            min-height: 700px
