--- a/electro/sass/style.sass
+++ b/electro/sass/style.sass
@@ -20,6 +20,8 @@ $transition-duration: .25s
 
 body, html
     overflow-x: hidden
+    &.fixed
+        overflow: hidden
 
 body
     display: flex
@@ -163,6 +165,7 @@ section
         color: #ffffff
         font-size: 18px
     &__dropdown-list
+        z-index: 2
         width: auto
         position: absolute
         background-color: #fff
@@ -267,6 +270,7 @@ section
         transform: translateY(-20px)
         opacity: 0
         pointer-events: none
+        z-index: 2
         visibility: hidden
         @include transition
     &__item
@@ -404,6 +408,49 @@ section
             transform: translate(-50%, -50%) rotate(45deg)
         &::after
             transform: translate(-50%, -50%) rotate(-45deg)
+
+.menu
+    position: fixed
+    width: 100%
+    height: 100%
+    transform: translateY(-100%)
+    top: 0
+    left: 0
+    z-index: 9
+    background-color: rgba(11, 16, 31, 0.8)
+    @include transition
+    padding: 130px 15px 10px
+    display: grid
+    grid-template-columns: repeat(2, minmax(300px, 400px))
+    row-gap: 30px
+    column-gap: 30px
+    overflow-y: auto
+    &__col
+        &_info
+            display: none
+        &_services
+            order: 1
+    .section__title
+        font-size: 26px
+        line-height: 30px
+    .footer__item + .footer__item
+        margin-top: 15px
+    .footer__link
+        font-size: 15px
+    .footer__list
+        max-width: 280px
+    .language
+        margin-top: 25px
+    .nav
+        &__list
+            flex-direction: column
+            align-items: flex-start
+        &__item
+            padding: 7px 0px
+    .nav__item + .nav__item
+        margin-top: 15px
+    &.active
+        transform: translateY(0%)
 
 .main
     flex-grow: 1
@@ -941,8 +988,10 @@ section
         font-size: 14px
         line-height: 18px
         color: #8b929f
-        display: inline-flex
-        align-items: flex-end
+        display: inline-block
+        & + &
+            display: inline-flex
+            align-items: flex-end
         a svg
             width: 100%
             max-width: 80px
