--- a/electro/sass/media.sass
+++ b/electro/sass/media.sass
@@ -34,6 +34,15 @@
         .services-btn, .contacts-dropdown, .language
             display: none
 
+    .portfolio
+        &__tab-underline
+            display: none
+        &__header
+            display: grid
+            grid-template-columns: repeat(3, 1fr)
+            row-gap: 10px
+            column-gap: 10px
+
     .calculator__container
         max-width: 510px
 
@@ -139,6 +148,11 @@
                         display: inline-block
                         text-align: center
                         margin-top: 10px
+
+@media screen and ( max-width: 950px )
+    .portfolio
+        &__header
+            grid-template-columns: repeat(2, 1fr)
 
 @media screen and ( max-width: 910px )
 
@@ -270,6 +284,12 @@
 
 @media screen and ( max-width: 720px )
 
+    .portfolio
+        &__item
+            height: 350px
+        &__container
+            grid-template-columns: repeat(auto-fit, minmax(280px, 400px))
+
     .popup
         &__text
             font-size: 16px
@@ -334,6 +354,20 @@
         &__text
             font-size: 14px
             line-height: 22px
+
+    
+    .portfolio
+        &__tab-title
+            padding: 10px
+        &__header
+            justify-content: center
+            row-gap: 2px
+            grid-template-columns: repeat(1, minmax(280px, 370px))
+        &__err-item
+            grid-column: 1 / 2
+            font-size: 22px
+            padding: 20px
+            text-align: center
 
     .hero
         padding: 18% 0px 12%
