--- a/electro/sass/media.sass
+++ b/electro/sass/media.sass
@@ -77,6 +77,10 @@
 
 @media screen and ( max-width: 1180px )
 
+    .main
+        &_inner
+            margin-top: 70px
+
     .calculator
         &__title
             font-size: 40px
@@ -101,6 +105,19 @@
 
     .menu
         padding: 90px 15px 10px
+
+    .contacts
+        &__col:first-child
+            max-width: 350px
+        &__list
+            grid-template-columns: 1fr
+            row-gap: 20px
+        &__bottom
+            flex-direction: column
+            align-items: flex-start
+        .footer__social-wrap
+            margin-top: 20px
+            margin-left: 0
 
     .logo
         max-width: 190px
@@ -277,6 +294,38 @@
     .services
         padding: 40px 0px
 
+    .contacts
+        &__title
+            margin-bottom: 20px
+        &__text
+            font-size: 15px
+            line-height: 22px
+        &__list
+            margin-top: 30px
+            grid-template-columns: 220px 1fr
+        &__col
+            &:first-child
+                max-width: 600px
+            & + &
+                margin-left: 0
+                margin-top: 40px
+        &__bottom
+            margin-top: 30px
+            flex-direction: row
+            align-items: center
+            .footer__social-wrap
+                margin-top: 0
+                margin-left: 20px
+        &__wrap
+            flex-direction: column
+        .hero__button
+            padding: 8px
+            max-width: 290px
+        .footer__link, .footer__text
+            &, & *
+                font-size: 15px
+                line-height: 22px
+
     .hero
         &__title
             font-size: 40px
@@ -406,6 +455,16 @@
                         text-align: center
                         margin-top: 10px
    
+    .contacts
+        &__bottom
+            flex-direction: column
+            align-items: flex-start
+        &__list
+            grid-template-columns: 1fr
+        .footer__social-wrap
+            margin-top: 20px
+            margin-left: 0
+
 @media screen and ( max-width: 535px )
     .menu
         grid-template-columns: 1fr
@@ -415,6 +474,10 @@
             right: 20px
 
 @media screen and ( max-width: 475px )
+
+    .main
+        &_inner
+            margin-top: 60px
 
     .menu
         padding: 70px 15px 10px
