--- a/electro/sass/style.sass
+++ b/electro/sass/style.sass
@@ -789,6 +789,8 @@ section
     
 .benefits
     padding-bottom: 80px
+    &_about
+        padding-top: 50px
     &__wrap
         justify-content: space-between
         display: flex
@@ -1241,6 +1243,47 @@ section
             border-top: 6px solid #ffffff
             transform: translate(0, -50%)
             right: 35px
+
+//
+//
+// -- О компании
+//
+//
+
+.about
+    padding: 40px 0px 80px
+    &__wrap
+        display: flex
+    &__content
+        max-width: 700px
+        .section__title
+            margin-bottom: 35px
+    &__text
+        font-size: 16px
+        line-height: 26px
+    &__banner
+        flex-shrink: 0
+        display: flex
+        align-items: center
+        flex-direction: column
+        max-width: 510px
+        margin-left: 70px
+    &__logo
+        max-width: 165px
+        margin-bottom: 20px
+    &__title
+        text-align: center
+        color: $btn-orange
+        font-weight: 500
+        font-size: 48px
+        line-height: 58px
+    &__subtitle
+        text-align: center
+        font-size: 24px
+        font-weight: 500
+        margin-top: 10px
+        display: inline-block
+        margin-bottom: 25px
 
 //
 //
