--- a/electro/sass/media.sass
+++ b/electro/sass/media.sass
@@ -166,6 +166,16 @@
                         text-align: center
                         margin-top: 10px
 
+    .about
+        &__title
+            font-size: 36px
+            line-height: 44px
+        &__subtitle
+            font-size: 20px
+        &__banner
+            margin-left: 40px
+            max-width: 400px
+
 @media screen and ( max-width: 950px )
     .portfolio
         &__header
@@ -330,6 +340,23 @@
         &__title
             font-size: 40px
             line-height: 44px
+
+    .about
+        &__logo
+            max-width: 140px
+        &__title
+            font-size: 30px
+            line-height: 40px
+        &__content .section__title
+            margin-bottom: 15px
+        &__subtitle
+            font-size: 18px
+        &__wrap
+            flex-direction: column-reverse
+            align-items: center
+        &__banner
+            margin-left: 0px
+            margin-bottom: 50px
 
 @media screen and ( max-width: 720px )
 
