--- a/cosmetics/sass/style.sass
+++ b/cosmetics/sass/style.sass
@@ -22,12 +22,13 @@ $maxWidth: 1865
         max-width: 948px
         padding-bottom: 160px
     &_head
-        padding: 20px 0px
+        padding: 0px 0px 20px
     &_title
         @include adaptiv-font(56, 26) 
         text-transform: uppercase
         font-weight: normal
         text-align: center
+        margin: 0
     &_banner
         margin-bottom: 30px
         &-img
@@ -80,7 +81,7 @@ $maxWidth: 1865
             .buxom2_combination-img
                 margin-right: 25px
         &-content
-            padding: 0px 30px
+            padding: 0px 20px
         &-img
             margin-left: 25px
         &-title
