--- a/zillion/css/fonts.css
+++ b/zillion/css/fonts.css
@@ -1,48 +1,2 @@
-@font-face {
-  font-family: "Montserrat";
-  font-display: 'swap';
-  font-style: normal;
-  font-weight: 400;
-  src: url(../fonts/Montserrat-Regular.woff) format("woff");
-  src: url(../fonts/Montserrat-Regular.woff2) format("woff2");
-}
-
-@font-face {
-  font-family: "Montserrat";
-  font-display: 'swap';
-  font-style: italic;
-  font-weight: 400;
-  src: url(../fonts/Montserrat-Italic.woff) format("woff");
-  src: url(../fonts/Montserrat-Italic.woff2) format("woff2");
-}
-
-@font-face {
-  font-family: "Montserrat";
-  font-display: 'swap';
-  font-style: normal;
-  font-weight: 600;
-  src: url(../fonts/Montserrat-SemiBold.woff) format("woff");
-  src: url(../fonts/Montserrat-SemiBold.woff2) format("woff2");
-}
-
-@font-face {
-  font-family: "Montserrat";
-  font-display: 'swap';
-  font-style: normal;
-  font-weight: 700;
-  src: url(../fonts/Montserrat-Bold.woff) format("woff");
-  src: url(../fonts/Montserrat-Bold.woff2) format("woff2");
-}
-
-@font-face {
-  font-family: "Montserrat";
-  font-display: 'swap';
-  font-style: normal;
-  font-weight: 800;
-  src: url(../fonts/Montserrat-ExtraBold.woff) format("woff");
-  src: url(../fonts/Montserrat-Bold.woff2) format("woff2");
-}
-
-/*# sourceMappingURL=fonts.css.map */
-
+@font-face{font-family:"Montserrat";font-display:'swap';font-style:normal;font-weight:400;src:url(../fonts/Montserrat-Regular.woff) format("woff");src:url(../fonts/Montserrat-Regular.woff2) format("woff2")}@font-face{font-family:"Montserrat";font-display:'swap';font-style:italic;font-weight:400;src:url(../fonts/Montserrat-Italic.woff) format("woff");src:url(../fonts/Montserrat-Italic.woff2) format("woff2")}@font-face{font-family:"Montserrat";font-display:'swap';font-style:normal;font-weight:600;src:url(../fonts/Montserrat-SemiBold.woff) format("woff");src:url(../fonts/Montserrat-SemiBold.woff2) format("woff2")}@font-face{font-family:"Montserrat";font-display:'swap';font-style:normal;font-weight:700;src:url(../fonts/Montserrat-Bold.woff) format("woff");src:url(../fonts/Montserrat-Bold.woff2) format("woff2")}@font-face{font-family:"Montserrat";font-display:'swap';font-style:normal;font-weight:800;src:url(../fonts/Montserrat-ExtraBold.woff) format("woff");src:url(../fonts/Montserrat-Bold.woff2) format("woff2")}
 /*# sourceMappingURL=fonts.css.map */
