--- a/cosmetics/sass/media.sass
+++ b/cosmetics/sass/media.sass
@@ -8,7 +8,7 @@
         &_item
             display: flex
             justify-content: center
-            padding: 0px 15px
+            padding: 0px
             & + &
                 margin-left: 0px
                 margin-top: 20px
@@ -40,7 +40,7 @@
         &_combination
             flex-direction: column
             &-content
-                padding: 0px 15px
+                padding: 0px 0px
             & + &
                 margin-top: 50px
     
