--- a/electro/sass/media.sass
+++ b/electro/sass/media.sass
@@ -146,8 +146,8 @@
         &__type-item
             justify-content: flex-start
             & + &
-                margin-left: 30px
-                margin-top: 0px
+                margin-left: 0px
+                margin-top: 30px
         &__bottom
             flex-direction: column
         &__price
@@ -177,6 +177,31 @@
             max-width: 400px
 
 @media screen and ( max-width: 950px )
+
+    .services__wrap
+        display: grid
+        grid-template-columns: repeat(auto-fill, minmax(340px, 1fr))
+        justify-content: center
+        justify-items: center
+        row-gap: 20px
+        column-gap: 20px
+
+    .service-item
+        padding: 15px 20px
+        margin: 0px
+        max-width: none
+        min-width: auto
+        display: flex
+        flex-direction: column
+        align-items: flex-start
+        width: 100%
+        &__link
+            margin-top: auto
+        &:last-child
+            grid-column: 1 / 3
+            margin: 0 auto-fit
+            max-width: 450px
+
     .portfolio
         &__header
             grid-template-columns: repeat(2, 1fr)
@@ -236,6 +261,10 @@
     .calc
         margin-top: 30px
         transform: none
+        &__type-item
+            & + &
+                margin-left: 30px
+                margin-top: 0
         &__type-name
             white-space: normal
         &__types
@@ -360,6 +389,9 @@
 
 @media screen and ( max-width: 720px )
 
+    .services__wrap
+        grid-template-columns: repeat(auto-fill, minmax(260px, 1fr))
+
     .portfolio
         &__item
             height: 350px
@@ -419,6 +451,15 @@
             padding-bottom: 114%
 
 @media screen and ( max-width: 580px )
+    .services__wrap
+        grid-template-columns: repeat(auto-fill, minmax(290px, 450px))
+
+    .service-item
+        &:last-child
+            grid-column: 1 / 2
+            margin: 0 auto-fit
+            max-width: 450px
+
     .benefits-item
         &__img, &__title
             margin-bottom: 10px
@@ -553,6 +594,7 @@
         max-width: none
             
 @media screen and ( max-width: 410px )
+
     .calc
         &__inputs
             grid-template-columns: repeat(1, 1fr)
