--- a/electro/sass/style.sass
+++ b/electro/sass/style.sass
@@ -307,7 +307,7 @@ section
             border-top: 2px solid $btn-orange
             &::before
                 content: ''
-                bottom: 100%
+                bottom: 101%
                 right: 20px
                 position: absolute
                 border: 30px solid transparent
@@ -348,7 +348,7 @@ section
                 color: $btn-orange
         &.active
             & + .language__list
-                bottom: -100px
+                bottom: -70px
                 opacity: 1
                 visibility: visible
             &::after
@@ -365,14 +365,15 @@ section
         list-style-type: none
         border-top: 1px solid $btn-orange
         background-color: #fff
-        bottom: -70px
+        bottom: -30px
+        right: -5px
         opacity: 0
         z-index: 2
         visibility: hidden
         @include transition
         &::before
             content: ''
-            bottom: 100%
+            bottom: 101%
             right: 0
             position: absolute
             border: 10px solid transparent
@@ -663,7 +664,7 @@ section
         width: 100%
         &-name
             display: inline-block
-            padding: 15px 0px 10px 15px
+            padding: 10px 0px 10px 15px
             color: #8b929f
             font-size: 24px
         &-wrap + &-wrap
@@ -1255,7 +1256,7 @@ section
     &__wrap
         display: flex
     &__content
-        max-width: 700px
+        max-width: 690px
         .section__title
             margin-bottom: 35px
     &__text
@@ -1266,11 +1267,11 @@ section
         display: flex
         align-items: center
         flex-direction: column
-        max-width: 510px
-        margin-left: 70px
+        max-width: 560px
+        margin-left: 90px
     &__logo
         max-width: 165px
-        margin-bottom: 20px
+        margin-bottom: 5px
     &__title
         text-align: center
         color: $btn-orange
