--- a/zillion/sass/style.sass
+++ b/zillion/sass/style.sass
@@ -854,6 +854,7 @@ body
 .game
     display: block
     position: relative
+    width: 100%
     &__img
         width: 100%
         height: 260px
@@ -890,6 +891,7 @@ body
                 padding-left: 34px
                 position: absolute
                 width: 100%
+                z-index: 3
             &__name
                 color: #fff
                 font-weight: 800
