--- a/kalashnikov/sass/media.sass
+++ b/kalashnikov/sass/media.sass
@@ -210,13 +210,15 @@
 @media screen and ( max-width: 470px )
 
 
-    .login__body
-        padding: 40px 20px
-        .big-title__text
-            font-size: 28px
-        .form__input
-            padding: 5px 10px
-            font-size: 16px
+    .login
+        padding-bottom: 30px
+        &__body
+            padding: 40px 20px
+            .big-title__text
+                font-size: 28px
+            .form__input
+                padding: 5px 10px
+                font-size: 16px
             
     .form
         &__input
