--- a/kalashnikov/sass/style.sass
+++ b/kalashnikov/sass/style.sass
@@ -37,7 +37,7 @@ body
     top: 0
     left: 0
     width: 100%
-    z-index: 10
+    z-index: 100
     transition: $transition
     position: absolute
     &__wrap
@@ -155,7 +155,7 @@ body
     left: 0
     width: 100%
     height: 100%
-    z-index: 4
+    z-index: 90
     transform: translateY(-100%)
     transition: $transition
     opacity: 0
@@ -869,6 +869,7 @@ body
     background-size: cover
     background-repeat: no-repeat
     background-image: url(../img/header-bg.png)
+    z-index: 5
     &__wrap
         display: flex
         align-items: center
@@ -935,17 +936,18 @@ body
         &.active::after
             transform: translate(0, -90%) rotateX(180deg)
     &__list
+        max-height: 218px 
+        overflow-y: auto
         position: absolute
         opacity: 0
         visibility: hidden
-        z-index: 2
+        z-index: 5
         transform: translateY(-40px)
         transition: $transition
         list-style-type: none
         width: 100%
         background-color: #181032
         box-shadow: 0 0 0 2px #4b539f
-        overflow: hidden
         border-radius: 5px
         &.active
             opacity: 1
