--- a/citadel/sass/style.sass
+++ b/citadel/sass/style.sass
@@ -106,14 +106,6 @@ section
     border-radius: 4px
     display: flex
     &__item
-        cursor: pointer
-    &__radio
-        position: absolute
-        opacity: 0
-        visibility: hidden
-    &__radio:checked + &__text
-        color: $text_blue
-    &__text
         text-transform: uppercase
         font-size: 16px
         color: #ffffff
@@ -121,6 +113,8 @@ section
         line-height: 40px
         display: inline-block
         padding: 0px 15px
+    &__item.active
+        color: $text_blue
 
 .burger
     display: none
