--- a/kalashnikov/sass/style.sass
+++ b/kalashnikov/sass/style.sass
@@ -916,7 +916,7 @@ body
         outline: none
         padding: 10px 20px
         border-radius: 5px
-        text-align-last: left
+        text-align: left
         position: relative
         cursor: pointer
         &::after
